project-template/logging/virtualservice-loki.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: loki-gateway
  namespace: logging
spec:
  gateways:
    - istio-ingress/gateway-internal
  hosts:
    - loki-gateway.example.com
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: loki-gateway.logging.svc.cluster.local
            port:
              number: 80
